<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<artifactId>java-p7-in-action</artifactId>
		<groupId>com.holddie</groupId>
		<version>1.0.0</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>

	<artifactId>java-common-mistakes</artifactId>

	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<spring-cloud.version>Greenwich.SR4</spring-cloud.version>
		<spring-data.version>Moore-SR4</spring-data.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-releasetrain</artifactId>
				<version>${spring-data.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.openfeign</groupId>
			<artifactId>feign-httpclient</artifactId>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>2.5.8</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-influx</artifactId>
		</dependency>
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.redisson</groupId>
			<artifactId>redisson-spring-boot-starter</artifactId>
			<version>3.11.5</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>28.2-jre</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba.csp</groupId>
			<artifactId>sentinel-core</artifactId>
			<version>1.7.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.zookeeper</groupId>
			<artifactId>zookeeper</artifactId>
			<version>3.5.6</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>fluent-hc</artifactId>
			<version>4.5.9</version>
		</dependency>
		<!--        <dependency>-->
		<!--            <groupId>org.springframework.boot</groupId>-->
		<!--            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
		<!--        </dependency>-->
		<dependency>
			<groupId>org.influxdb</groupId>
			<artifactId>influxdb-java</artifactId>
			<version>2.17</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-csv</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>2.1.1</version>
		</dependency>
		<!--        <dependency>-->
		<!--            <groupId>org.springframework</groupId>-->
		<!--            <artifactId>spring-aspects</artifactId>-->
		<!--        </dependency>-->
		<!--        <dependency>-->
		<!--            <groupId>com.github.gavlyukovskiy</groupId>-->
		<!--            <artifactId>p6spy-spring-boot-starter</artifactId>-->
		<!--            <version>1.6.1</version>-->
		<!--        </dependency>-->
	</dependencies>

	<build>
		<!--        <sourceDirectory>${project.build.directory}/generated-sources/delombok</sourceDirectory>-->
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.*</include>
				</includes>
				<filtering>false</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>org.geekbang.time.commonmistakes.troubleshootingtools.jdktool.CommonMistakesApplication
					</mainClass>
				</configuration>
			</plugin>
			<!--            <plugin>-->
			<!--                <groupId>org.projectlombok</groupId>-->
			<!--                <artifactId>lombok-maven-plugin</artifactId>-->
			<!--                <version>1.18.0.0</version>-->
			<!--                <executions>-->
			<!--                    <execution>-->
			<!--                        <phase>generate-sources</phase>-->
			<!--                        <goals>-->
			<!--                            <goal>delombok</goal>-->
			<!--                        </goals>-->
			<!--                    </execution>-->
			<!--                </executions>-->
			<!--                <configuration>-->
			<!--                    <addOutputDirectory>false</addOutputDirectory>-->
			<!--                    <sourceDirectory>src/main/java</sourceDirectory>-->
			<!--                </configuration>-->
			<!--            </plugin>-->
			<!--            <plugin>-->
			<!--                <groupId>org.codehaus.mojo</groupId>-->
			<!--                <artifactId>aspectj-maven-plugin</artifactId>-->
			<!--                <version>1.10</version>-->
			<!--                <configuration>-->
			<!--                    <complianceLevel>1.8</complianceLevel>-->
			<!--                    <source>1.8</source>-->
			<!--                    <aspectLibraries>-->
			<!--                        <aspectLibrary>-->
			<!--                            <groupId>org.springframework</groupId>-->
			<!--                            <artifactId>spring-aspects</artifactId>-->
			<!--                        </aspectLibrary>-->
			<!--                    </aspectLibraries>-->
			<!--                </configuration>-->
			<!--                <executions>-->
			<!--                    <execution>-->
			<!--                        <goals>-->
			<!--                            <goal>compile</goal>-->
			<!--                            <goal>test-compile</goal>-->
			<!--                        </goals>-->
			<!--                    </execution>-->
			<!--                </executions>-->
			<!--            </plugin>-->
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>nexus-aliyun</id>
			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

</project>